<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common -->
    <string name="app_name">Mixture</string>
    <string name="menu_settings">Settings</string>
    <string name="init_application">アプリを初期化中です</string>
    
    
    <!-- Main menu -->
    <string name="main_menu">メインメニュー</string>
    <string name="main_menu_scan">スキャン</string>
    <string name="main_menu_mixin">ミックスイン</string>
    <string name="main_menu_shop">ショップ</string>
    <string name="main_menu_collection">コレクション</string>
    <string name="main_menu_status">ステータス</string>
    <string name="main_menu_help">メインメニューについて</string>
    <string name="main_menu_money_text">所持金</string>
    
    <string name="dialog_main_menu_help_title">メインメニューについて</string>
    <string name="dialog_main_menu_help_description">メインメニューでは様々なアクションを起こすことが出来ます。以下にそれぞれのアクションについて説明をしていきますので、参考にしてみてください。</string>
    <string name="dialog_main_menu_help_scan">スキャン</string>
    <string name="dialog_main_menu_help_scan_description">商品バーコードをスキャンして素材を抽出するアクションです。素材はミックスインするために必要になります。</string>
    <string name="dialog_main_menu_help_mixin">ミックスイン</string>
    <string name="dialog_main_menu_help_mixin_description">素材をふたつ選択して合成を行います。組み合わせによって様々なアイテムを作り出すことが出来ます。</string>
    <string name="dialog_main_menu_help_shop">ショップ</string>
    <string name="dialog_main_menu_help_shop_description">素材の売買を行うことが出来ます。現実通貨や仮想通貨での購入や、オンラインを利用した購入をすることも出来ます。</string>
    <string name="dialog_main_menu_help_collection">コレクション</string>
    <string name="dialog_main_menu_help_collection_description">今までに集めた素材や作り出したアイテムを確認することが出来ます。ぜひとも全コンプリートを目指してください。</string>
    <string name="dialog_main_menu_help_status">ステータス</string>
    <string name="dialog_main_menu_help_status_description">現在の調合師レベルや次のレベルまでに必要な経験値など、Mixtureで遊んだ記録が記載されています。</string>
    
    
    
    <!-- Menu -->
    <string name="menu_help">ヘルプ</string>
    <string name="menu_important">だいじなもの</string>
    <string name="menu_item_s">アイテム クラスS</string>
    <string name="menu_item_a">アイテム クラスA</string>
    <string name="menu_item_b">アイテム クラスB</string>
    <string name="menu_item_c">アイテム クラスC</string>
    <string name="menu_item_d">アイテム クラスD</string>
    <string name="menu_material_s">素材 クラスS</string>
    <string name="menu_material_a">素材 クラスA</string>
    <string name="menu_material_b">素材 クラスB</string>
    <string name="menu_material_c">素材 クラスC</string>
    <string name="menu_material_d">素材 クラスD</string>
    
    
    

    <!-- package Activity -->
    <!-- NotFoundScanApp -->
    <string name="activity_not_found_scan_app_title">スキャンエラー</string>
    <string name="failed_scan_notice">スキャンをするにはバーコードリーダーアプリが必要です。\nGooglePlayよりバーコードリーダーをダウンロードしてください。</string>
    <string name="download_scan_app">GooglePlayからダウンロード</string>

    <!-- ScanResult -->
    <string name="activity_scan_result_title">スキャンに成功しました！</string>
    <string name="scan_result_header_information">Information</string>
    <string name="scan_result_header_description">Description</string>
    <string name="scan_result_button_get_material">素材を取得</string>
    <string name="scan_result_button_sale_shop">ショップへ売却</string>
    
    <string name="dialog_first_scan_title">おめでとう！</string>
    <string name="dialog_first_scan_header">はじめてのスキャン</string>
    <string name="dialog_first_scan_message">商品バーコードから素材を抽出することを「スキャン」と言います。抽出した素材は、素材として取得するかショップへ売却をして仮想通貨prとして取得するかを選択することが出来ます。</string>
    <string name="dialog_first_scan_message2">それでは、抽出した素材を実際に取得してみましょう！</string>
    
    <string name="dialog_second_scan_title">おめでとう！</string>
    <string name="dialog_second_scan_header">二度目のスキャン</string>
    <string name="dialog_second_scan_message">二つ目の素材の抽出に成功しました。取得した素材は異なる素材同士を掛けあわせて新たなアイテムを生成することが出来ます。</string>
    <string name="dialog_second_scan_message2">それでは、メインメニューからミックスインを選択して実際に素材同士を掛けあわせてみましょう！</string>
    
    <string name="dialog_first_rare_title">おめでとう！</string>
    <string name="dialog_first_rare_header">はじめてのレアスキャン</string>
    <string name="dialog_first_rare_message">通常のスキャンでは自身の調合師レベルに相応する素材しか抽出することしか出来ませんが、ごく稀に調合師レベル以上の素材を抽出することが出来ます。低確率でレアや素材を抽出することを「レアスキャン」と呼びます。</string>
    <string name="dialog_first_rare_message2">抽出されたレア素材は通常の素材と同じく、そのまま取得するかショップへ売却するかを選択することが出来ます。また、オフラインショップではレアスキャンの確率を向上させるアイテムが販売されることがあります。是非ともショップが開放されたら購入しておきたいアイテムです。</string>
    
    <string name="dialog_scan_result_sale_title">素材の売却</string>
    <string name="dialog_scan_result_sale_description">素材をそのままショップに売却をしてもよろしいですか？</string>
    <string name="dialog_scan_result_sale_price">売却後の所持金</string>
    
    
    <!-- MixinShakeActivity -->
    <string name="activity_mixin_shake_title">ミックスイン</string>
    
    
    
    
    
    <!-- pakage Fragment -->
    <!-- Status -->
    <string name="fragment_status_title">ステータス</string>
    <string name="status_preparation_level">現在の調合師レベル</string>
    <string name="status_next_level_exp">次の調合師レベルまでに必要な経験値</string>
    <string name="status_total_exp">今までに獲得した総経験値</string>
    <string name="status_total_money">今までに獲得した総額</string>
    <string name="status_total_scan">今までの総スキャン回数</string>
    <string name="status_total_rare_scan">今までの総レアスキャン回数</string>
    <string name="status_total_mixin">今までの総ミックスイン回数</string>
    <string name="status_total_get_material">今までに取得した素材数</string>
    <string name="status_total_get_item">今までに生成したアイテム数</string>
    
    
    <!-- Mixin -->
    <string name="fragment_mixin_title">ミックスイン</string>
    <string name="fragment_mixin_pager_title_date">取得日付順</string>
    <string name="fragment_mixin_pager_title_name">名前順</string>
    <string name="fragment_mixin_pager_title_qty">個数順</string>
    
    <string name="fragment_mixin_material_list_empty">素材がありません。</string>
    
    
    <!-- MixinSecondList -->
    <string name="fragment_mixin_second_list_empty">ミックスイン可能な素材がありません。</string>
    
    
    <!-- MixinShake -->
    <string name="dialog_mixin_shake_title">ミックスインの確認</string>
    
    
    

    <!-- Shop -->
    <string name="fragment_shop_title">ショップ</string>
    <string name="fragment_shop_title_offline">オフライン</string>
    <string name="fragment_shop_title_online">オンライン</string>
    
    <string name="fragment_shop_disable_error">現在ショップを利用することはできません。ショップの利用には調合師レベル2以上が必要です。</string>
    <string name="fragment_shop_none_list_error">本日販売できる素材は見つかりませんでした。\nまた明日ご利用ください。</string>
    
    <string name="dialog_offline_shop_buy_title">購入数を指定してください</string>
    <string name="dialog_shop_buy_qty">個数：</string>
    <string name="dialog_shop_buy_submit_button">購入</string>
    <string name="dialog_shop_buy_cancel_button">キャンセル</string>
    <string name="dialog_shop_max_qty_error_title">Caution!</string>
    <string name="dialog_shop_max_qty_error_message">選択した素材は既に限度数所持をしているため購入することはできません。\n別の素材を選択してください。</string>
    
    <string name="dialog_help_shop_title">ショップについて</string>
    <string name="dialog_help_shop_about">様々な素材を購入することが出来ます。\nオフラインショップとオンラインショップの二種類のショップがあり、それぞれで購入出来る素材が異なります。品揃えはおおよそ一日で更新されるので、こまめにチェックをすることをお薦めします。</string>
    <string name="dialog_help_shop_offline">オフラインショップ</string>
    <string name="dialog_help_shop_online">オンラインショップ</string>
    <string name="dialog_help_shop_about_offline">仮想通貨prで素材を購入することが出来ます。品揃えは今までに取得経験のある素材が並びます。新しい素材をどんどん取得して、品揃えを多くしていきましょう。</string>
    <string name="dialog_help_shop_about_online">GooglePlayを経由し、現実通貨で素材を購入することが出来ます。様々な素材が品揃えとして並びます。珍しい素材が見つかるかもしれません。</string>
    
    

    <!-- Collection -->
    <string name="fragment_collection_title">コレクション</string>
    
    
    
    
    
    

    <!-- Dialog Message -->
    <string name="dialog_welcome_title">ようこそ、mixtureへ！</string>
    <string name="dialog_welcome_message">mixtureは商品バーコードをスキャンして素材を集め、素材同士を調合して新たなアイテムを生成していくアプリです。まずはスキャンを選択して身近にあるバーコードから素材を取得してみましょう！\n\n画面の使い方が分からない時はアクションバーにあるヘルプボタンから解説を読むことが出来ます。\n\nそれでは、mixtureの世界をぜひ楽しんでいってください！</string>
    

</resources>