<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/common_vertical_linear_layout"
    android:background="@color/main_menu_background" >
    
    <TextView
        android:id="@+id/main_menu_scan_item"
        style="@style/main_menu_item"
        android:text="@string/main_menu_scan"
        android:drawableLeft="@drawable/main_menu_scan_icon"
    />
    
    <TextView
        android:id="@+id/main_menu_mixin_item"
        style="@style/main_menu_item"
        android:text="@string/main_menu_mixin"
        android:drawableLeft="@drawable/main_menu_mixin_icon"
    />
    
    <TextView
        android:id="@+id/main_menu_shop_item"
        style="@style/main_menu_item"
        android:text="@string/main_menu_shop"
        android:drawableLeft="@drawable/main_menu_shop_icon"
    />
    
    <TextView
        android:id="@+id/main_menu_collection_item"
        style="@style/main_menu_item"
        android:text="@string/main_menu_collection"
        android:drawableLeft="@drawable/main_menu_collection_icon"
    />
    
    <TextView
        android:id="@+id/main_menu_status_item"
        style="@style/main_menu_item"
        android:text="@string/main_menu_status"
        android:drawableLeft="@drawable/main_menu_status_icon"
    />

</LinearLayout>